Update and rename first.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background:black;">
 <marquee><h1 style="color:white; text-decoration: underline;">Gallery</h1></marquee>
-<img src="./IMG_2624.jpg" 
+<img src="IMG_2624.jpg" 
 alt="not there "
 height="250"
 width="300"
